# lab_ips_sec

./: .gitignore  BAO_CAO_DO_AN.md  BAO_CAO_DO_AN_PHAN2.md  BAO_CAO_MON_HOC.md  CMakeLists.txt  DEMO_EVALUATION_REPORT.md  DEMO_SCRIPT.md  FIX_SUMMARY.md  HANDOFF.md  HANDOUT.md  HUONG_DAN_DEMO_RULES.md  HUONG_DAN_DEMO_RULES_FIXED.md  PRESENTATION_PLAN.md  PROJECT_REPORT_EVALUATION.md  README.md  ROUTING_FIX_MANUAL.sh  SYSTEM_DESIGN_ARCHITECTURE.md  VISUAL_SUGGESTIONS.md  demo_auto_create_rules.sh  demo_simple.sh  docker-compose.yml  fix_ips_routing.sh  package-lock.json  package.json  ping_test.sh  plan.md  playwright.config.ts  test_alerts.sh
.claude/: settings.json
.playwright-mcp/: page-2026-04-27T10-19-07-648Z.yml  page-2026-04-27T10-33-02-185Z.yml  page-2026-04-27T10-33-53-484Z.yml
config/: minisnort-minimal.yaml  minisnort.yaml
config/rules/: local.rules  local.rules.20260429T122542.892353Z.85eb91ba.bak
dashboard/: server.py
dashboard/static/: dashboard.css  dashboard.js  index.html
docker/attacker/: Dockerfile
docker/dashboard/: Dockerfile
docker/ips/: Dockerfile
docker/victim/: Dockerfile  init-dvwa.sh
logs/: runtime_snapshot.txt
logs/evidence/sprint0/: alerts.txt  attacks.txt  runtime.txt  test.txt
logs/evidence/sprint1/: alerts.txt  attacks.txt  runtime.txt  test.txt
logs/evidence/sprint2_ops/: alerts.txt  attacks.txt  runtime.txt  test.txt
logs/evidence/sprint3/: alerts.txt  attacks.txt  runtime.txt  test.txt
logs/evidence/sprint4/: alerts.txt  attacks.txt  runtime.txt  test.txt
logs/evidence/sprint5/: alerts.txt  attacks.txt  runtime.txt  test.txt
logs/evidence/sprint5_fix/: alerts.txt  attacks.txt  runtime.txt  test.txt
logs/evidence/sprint5_fix2/: attacks.txt  runtime.txt
logs/evidence/sprint5_gateA_final/: alert_tail.txt  attacks.txt  attacks_fixed.txt  connectivity.txt  ips_logs_tail.txt  runtime_health.txt  runtime_snapshot.txt
logs/evidence/sprint5_rerun/: alerts.txt  attacks.txt  runtime.txt
logs/evidence/sprint5_stability/: test.txt
logs/evidence/sprint6_final/: alert_summary.txt  alert_tail.txt  attacks.txt  connectivity.txt  final_summary.txt  ips_logs_after_attacks.txt  ips_logs_tail.txt  runtime_health.txt  test.txt
logs/evidence/sprint6_iter1/: alerts.txt  attacks.txt  runtime.txt  test.txt
logs/evidence/sprint6_iter2/: alerts.txt  attacks.txt  runtime.txt  test.txt
logs/evidence/sprint6_iter3/: alerts.txt  attacks.txt  runtime.txt  test.txt
logs/evidence/sprint6_recursive_iter1/: alerts.txt  attacks.txt  connectivity.txt  runtime.txt  test.txt
logs/evidence/sprint6_rerun_alert_details/: alerts.txt  attacks.txt  runtime.txt  test.txt
logs/evidence/sprint6_rerun_alert_details_v2/: alerts.txt  attacks.txt  final_summary.txt  runtime.txt  test.txt
logs/evidence/sprint7/: alerts.txt  attacks.txt  ips_logs_before_attacks.txt  lab_up.txt  runtime.txt  summary.txt  test.txt
logs/evidence/sprint7_http_inspect_final/: alerts.txt  attacks.txt  runtime.txt  test.txt
logs/evidence/sprint7_http_inspect_final_v2/: alerts.txt  attacks.txt  final_summary.txt  runtime.txt  test.txt
logs/evidence/sprint7_http_inspect_final_v3/: alerts.txt  attacks.txt  final_summary.txt  runtime.txt  test.txt
logs/evidence/sprint7_http_inspect_final_v4/: alerts.txt  attacks.txt  final_summary.txt  runtime.txt  test.txt
logs/evidence/sprint7_http_inspect_final_v5/: alerts.txt  attacks.txt  final_summary.txt  runtime.txt  test.txt
logs/evidence/sprint7_http_inspect_final_v6/: alerts.txt  attacks.txt  final_summary.txt  runtime.txt  test.txt
logs/evidence/sprint7_http_inspect_final_v7/: alerts.txt  attacks.txt  final_summary.txt  runtime.txt  test.txt
logs/evidence/sprint7_http_inspect_iter1/: alerts.txt  attacks.txt  runtime.txt  test.txt
playwright-report/: index.html
scripts/: attack_admin.sh  attack_block_icmp.sh  attack_sqli.sh  attack_sqli_body.sh  attack_sqlmap.sh  attack_ssh_brute.sh  attack_synscan.sh  attack_traversal.sh  attacker_entrypoint.sh  demo_rule_tests.sh  force_ips_routing.sh  ips_entrypoint.sh  lab_up.sh  run_all_demo.sh  tail_evidence.sh  verify_capture.sh
src/: CMakeLists.txt  main.cpp
src/core/: engine.cpp  engine.h  packet.h  verdict.h
src/daq/: i_daq.h  nfq_daq.cpp  nfq_daq.h  pcap_daq.cpp  pcap_daq.h
src/decoder/: decoder.cpp  decoder.h  ethernet.cpp  ethernet.h  icmp.cpp  icmp.h  ipv4.cpp  ipv4.h  tcp.cpp  tcp.h  udp.cpp  udp.h
src/detection/: engine.cpp  engine.h  http_parser.cpp  http_parser.h  matcher.cpp  matcher.h  threshold.cpp  threshold.h
src/flow/: flow_key.h  flow_table.cpp  flow_table.h  tcp_state.cpp  tcp_state.h
src/logger/: alert_fast.cpp  alert_fast.h  alert_json.cpp  alert_json.h
src/rules/: parser.cpp  parser.h  rule.h  rule_store.cpp  rule_store.h
src/util/: config.cpp  config.h  ip.cpp  ip.h  log.h
tests/: CMakeLists.txt  test_alert_fast.cpp  test_decoder.cpp  test_engine.cpp  test_flow.cpp  test_matcher.cpp  test_parser.cpp  test_threshold.cpp
tests/dashboard/: test_dashboard.py
tests/e2e/: dashboard.spec.ts
(+24 files in other folders)
